--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body {
   overflow: hidden;
   font-family: "Roboto", serif;
   background:url('albums_back.png') ;
-  
+
   
   
   margin: 0;
-            background-image: ;
+      
             background-size: cover;
             background-attachment: fixed;
-            z-index: -1;
+            z-index:-1 ;
 }
 
 
@@ -50,7 +50,7 @@ body {
   transition: transform 0.8s cubic-bezier(0, 0.02, 0, 1);
 }
 .carousel-item .carousel-box {
-  position: absolute;
+  position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
